fix: change dependency from stylistic config to plugin

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yolocat/eslint-config",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "My ESLint configuration",
   "main": "index.js",
   "keywords": [
@@ -13,7 +13,7 @@
   ],
   "peerDependencies": {
     "eslint": ">=8",
-	"@stylistic/eslint-config": ">=1.8.0"
+	"@stylistic/eslint-plugin": ">=1.8.0"
   },
   "author": "yolocat-dev",
   "license": "ISC"
